# Game

./: CMakeLists.txt
ae/: CMakeLists.txt
ae/ae/: animation.cpp  animation.h  animation_manager.cpp  animation_manager.h  app.cpp  app.h  config.cpp  config.h  engine.cpp  engine.h  engine_context.cpp  engine_context.h  engine_context_object.cpp  engine_context_object.h  engine_data.h  game_state.cpp  game_state.h  game_state_stack.cpp  game_state_stack.h  input_action_manager.cpp  input_action_manager.h  task.cpp  task.h  task_manager.cpp  task_manager.h
ae/ae/assets/: asset_loader.h  asset_loaders.h  assets.h  font_loader.h  model_loader.h  shader_loader.h  sound_buffer_loader.h  texture_loader.h
ae/ae/audio/: audio_device.cpp  audio_device.h  audio_stream.cpp  audio_stream.h  enums.h  music.cpp  music.h  sound.cpp  sound.h  sound_buffer.cpp  sound_buffer.h  sound_source.cpp  sound_source.h  utils.cpp  utils.h
ae/ae/collisions/: colliders.h  collision_result.h  collisions.cpp  collisions.h
ae/ae/common/: consts.h  glm_utils.cpp  glm_utils.h  spdlog_utils.h  utils.cpp  utils.h
ae/ae/geometry/: frustum.cpp  frustum.h  geometry_utils.cpp  geometry_utils.h  primitives.cpp  primitives.h  triangles_node.h
ae/ae/graphics/common/: enums.h  utils.cpp  utils.h
ae/ae/graphics/core/: batch_2d.cpp  batch_2d.h  buffer.cpp  buffer.h  color.cpp  color.h  default_shaders.cpp  default_shaders.h  font.cpp  font.h  glyph.h  material.h  quad.cpp  quad.h  render_state.h  render_target.cpp  render_target.h  render_texture.cpp  render_texture.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.h  vertex_array.cpp  vertex_array.h  vertex_attrib.h
ae/ae/graphics/scene/: assimp_helper.cpp  assimp_helper.h  drawable.cpp  drawable.h  mesh.cpp  mesh.h  model.cpp  model.h  model_instance.cpp  model_instance.h  pose.cpp  pose.h  pose_animation.cpp  pose_animation.h  pose_animator.cpp  pose_animator.h  shape.cpp  shape.h  skeleton.cpp  skeleton.h  skybox.cpp  skybox.h  sprite.cpp  sprite.h
ae/ae/gui/: button_base.cpp  button_base.h  buttons_group.cpp  buttons_group.h  control.cpp  control.h  gui.cpp  gui.h  image.cpp  image.h  input_text_base.cpp  input_text_base.h  label.cpp  label.h  progress_bar_base.cpp  progress_bar_base.h
ae/ae/scene/: bvh.h  collisions_s.cpp  collisions_s.h  components.h  draw_s.cpp  draw_s.h  lights_s.cpp  lights_s.h  movement_s.cpp  movement_s.h  multi_component_watcher.h  player_s.cpp  player_s.h  scene.cpp  scene.h  scene_context.cpp  scene_context.h  scene_data.h  shadows_s.cpp  shadows_s.h  system.cpp  system.h
ae/ae/system/: clock.cpp  clock.h  files.cpp  files.h  log.h  memory.h  signal.h  string.cpp  string.h  time.cpp  time.h
ae/ae/window/: glfw_manager.cpp  glfw_manager.h  input.cpp  input.h  window.cpp  window.h
ae/shaders/: gui.frag  gui.vert  light.inc  main.frag  main.vert  material.inc  old_terminal_screen_quad.frag  screen_quad.frag  screen_quad.vert  skybox.frag  skybox.vert
src/: main.cpp
src/game/: first_state.cpp  first_state.h  game.cpp  game.h  gameplay_state.cpp  gameplay_state.h  load_level_state.cpp  load_level_state.h  main_menu_state.cpp  main_menu_state.h
src/game/gui/: button.cpp  button.h  dialog.cpp  dialog.h  first_state_gui.cpp  first_state_gui.h  frame.cpp  frame.h  gui_theme.cpp  gui_theme.h  input_text.cpp  input_text.h  load_level_gui.cpp  load_level_gui.h  main_menu.cpp  main_menu.h  main_menu_button.cpp  main_menu_button.h  main_menu_gui.cpp  main_menu_gui.h  settings_dialog.cpp  settings_dialog.h  settings_frame.cpp  settings_frame.h  style.cpp  style.h
src/game/gui/controls/: button.cpp  button.h  dialog.cpp  dialog.h  fake_terminal.cpp  fake_terminal.h  fake_terminal_button.cpp  fake_terminal_button.h  frame.cpp  frame.h  input_text.cpp  input_text.h  progress_bar.cpp  progress_bar.h  tab_button.cpp  tab_button.h  tabs_container.cpp  tabs_container.h
